Domibus 5.0
- Remove deletion strategy STORED_PROCEDURE
- change domibus.passwordPolicy.pattern, domibus.passwordPolicy.validationMessage, domibus.plugin.passwordPolicy.pattern and domibus.plugin.passwordPolicy.validationMessage properties to enforce 16 chars as a minimum length of passwords for users
- Add HSTS header to admin console REST calls and the property domibus.httpSecurity.httpStrictTransportSecurity.maxAge to configure how much it is kept(default one year)
- Remove overlapping indexes.
- On the Domibus Admin Console, the Messages page displays by default only messages exchanged in the past hour
- Update retry mechanism to consider the retry timeout
- Add alert when expired partition cannot be deleted
- New RetentionWorker to delete entire expired partition
- Add message tables partitioning sql scripts
- EARCHIVING: allows archiving messages sent / received
- ProcessingType allowing to specify if the message should be pushed or pulled has been added in all the domibus plugins.
- new sequence for id generation (in Oracle: sequence, in mysql H2: Table) of the format: yyMMddHHDDDDDDDDDD (ex: 210809150000000050)
- Switch to using UTC to save timestamp values.
- All date time values missing a timezone offset received from Domibus clients are considered to be in UTC offset; all
of the following values point to the same instant - the 21st of July 2021, 12:27:00 [UTC] -:
    - a date value of "2021-07-21T14:27:00+02:00" will be interpreted to have an offset of +02:00;
    - a date value of "2021-07-21T12:27:00" will be interpreted to be in the UTC timezone with a +00:00 offset.
- Update all libraries to the latest version: Apache CXF 3.4.5, Ehcache 3.8.1, Hibernate Validator 6.1.5.Final, ActiveMQ 5.16.3, etc
- Update Apache WSS4J to 2.3.3 to fix an issue reported in Apache Santuario.
- Added a new property domibus.connection.cxf.ssl.offload.enable to allow support for offloading the SSL onto a forward SSL proxy